dev_ws/log/build_2021-03-17_15-12-56/py_pubsub/stderr.log
  File "/home/mingyu/dev_ws/install/py_pubsub/lib/python3.8/site-packages/py_pubsub/publisher_member_function.py", line 75
    global ser = Ser
               ^
SyntaxError: invalid syntax

